Config exported to manage field explication.

--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: fr
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_groupe
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -26,6 +27,16 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_groupe:
+    weight: 31
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+      match_limit: 10
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   google_analytics:
     weight: 3
     settings: {  }
