--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -18,7 +18,6 @@ module:
   contact: 0
   contact_storage: 0
   contextual: 0
-  coopernetaccess: 0
   crop: 0
   ctools: 0
   datetime: 0
@@ -45,7 +44,6 @@ module:
   history: 0
   image: 0
   image_widget_crop: 0
-  jsonapi: 0
   juicebox: 0
   kint: 0
   language: 0
@@ -61,6 +59,8 @@ module:
   options: 0
   page_cache: 0
   path: 0
+  path_alias: 0
+  permissions_by_term: 0
   quickedit: 0
   rdf: 0
   redirect: 0
