--- a/config/sync/core.entity_form_display.node.carte.default.yml
+++ b/config/sync/core.entity_form_display.node.carte.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.carte.body
     - field.field.node.carte.field_carte_colonne
+    - field.field.node.carte.field_carte_explication
     - field.field.node.carte.field_carte_question
     - field.field.node.carte.field_carte_reponse
     - field.field.node.carte.field_carte_thematique
@@ -26,6 +27,7 @@ content:
       rows: 9
       summary_rows: 3
       placeholder: ''
+      show_summary: false
     third_party_settings: {  }
     region: content
   created:
@@ -40,8 +42,17 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_carte_explication:
+    weight: 126
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
     region: content
   field_carte_question:
     weight: 122
@@ -65,6 +76,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
@@ -117,6 +129,7 @@ content:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
+      match_limit: 10
     region: content
     third_party_settings: {  }
   url_redirects:
