--- a/config/sync/core.entity_view_display.node.carte.default.yml
+++ b/config/sync/core.entity_view_display.node.carte.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.carte.body
     - field.field.node.carte.field_carte_colonne
+    - field.field.node.carte.field_carte_explication
     - field.field.node.carte.field_carte_question
     - field.field.node.carte.field_carte_reponse
     - field.field.node.carte.field_carte_thematique
@@ -33,6 +34,13 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_carte_explication:
+    weight: 106
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   field_carte_question:
     weight: 102
