--- a/config/sync/views.view.cartes.yml
+++ b/config/sync/views.view.cartes.yml
@@ -1,19 +1,18 @@
-uuid: 5fc5bf4d-1e6e-4d6d-b14e-b0dfe5548144
+uuid: ba7ac452-0117-42e7-b7f0-579b918ae7f8
 langcode: fr
 status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
-    - node.type.article
-    - taxonomy.vocabulary.tags
+    - node.type.carte
+    - taxonomy.vocabulary.carte_colonne
+    - taxonomy.vocabulary.carte_thematique
   module:
     - node
     - taxonomy
     - user
-_core:
-  default_config_hash: kCIQmBbaBH24Z37t_GjgZz2IJfCXkQOpkYQKL2qWGFg
-id: blog
-label: Blog
+id: cartes
+label: cartes
 module: views
 description: ''
 tag: ''
@@ -44,23 +43,20 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Filtrer
+          submit_button: Apply
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
-          expose_sort_order: false
+          expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
         type: mini
         options:
-          items_per_page: 30
+          items_per_page: 100
           offset: 0
           id: 0
           total_pages: null
-          tags:
-            previous: ‹‹
-            next: ››
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -69,6 +65,9 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
+          tags:
+            previous: ‹‹
+            next: ››
       style:
         type: default
       row:
@@ -142,17 +141,61 @@ display:
           table: node_field_data
           field: type
           value:
-            article: article
+            carte: carte
           entity_type: node
           entity_field: type
           plugin_id: bundle
           expose:
             operator_limit_selection: false
             operator_list: {  }
-        field_tags_target_id:
-          id: field_tags_target_id
-          table: node__field_tags
-          field: field_tags_target_id
+        uid:
+          id: uid
+          table: node_field_data
+          field: uid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: uid_op
+            label: 'Écrit par'
+            description: ''
+            use_operator: false
+            operator: uid_op
+            identifier: uid
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              formateur: '0'
+              administrator: '0'
+            reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: uid
+          plugin_id: user_name
+        field_carte_thematique_target_id:
+          id: field_carte_thematique_target_id
+          table: node__field_carte_thematique
+          field: field_carte_thematique_target_id
           relationship: none
           group_type: group
           admin_label: ''
@@ -161,18 +204,19 @@ display:
           group: 1
           exposed: true
           expose:
-            operator_id: field_tags_target_id_op
-            label: Thématique
+            operator_id: field_carte_thematique_target_id_op
+            label: 'Thématique (field_carte_thematique)'
             description: ''
             use_operator: false
-            operator: field_tags_target_id_op
-            identifier: field_tags_target_id
+            operator: field_carte_thematique_target_id_op
+            identifier: field_carte_thematique_target_id
             required: false
             remember: false
             multiple: false
             remember_roles:
               authenticated: authenticated
               anonymous: '0'
+              formateur: '0'
               administrator: '0'
             reduce: false
             operator_limit_selection: false
@@ -192,7 +236,55 @@ display:
           reduce_duplicates: false
           type: select
           limit: true
-          vid: tags
+          vid: carte_thematique
+          hierarchy: false
+          error_message: true
+          plugin_id: taxonomy_index_tid
+        field_carte_colonne_target_id:
+          id: field_carte_colonne_target_id
+          table: node__field_carte_colonne
+          field: field_carte_colonne_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value: {  }
+          group: 1
+          exposed: true
+          expose:
+            operator_id: field_carte_colonne_target_id_op
+            label: Colonne
+            description: ''
+            use_operator: false
+            operator: field_carte_colonne_target_id_op
+            identifier: field_carte_colonne_target_id
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              formateur: '0'
+              administrator: '0'
+            reduce: false
+            operator_limit_selection: false
+            operator_list: {  }
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          type: select
+          limit: true
+          vid: carte_colonne
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
@@ -212,8 +304,18 @@ display:
           expose:
             label: ''
           granularity: second
-      title: Blog
-      header: {  }
+      title: cartes
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Displaying @start - @end of @total'
+          plugin_id: result
       footer: {  }
       empty: {  }
       relationships: {  }
@@ -237,7 +339,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: blog
+      path: cartes
     cache_metadata:
       max-age: -1
       contexts:
