--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/admin_toolbar_tools": "^1.27",
         "drupal/antibot": "^1.2",
         "drupal/better_exposed_filters": "^3.0@alpha",
+        "drupal/book_tree_menu": "^1.0",
         "drupal/bootstrap": "^3.20",
         "drupal/config_installer": "^1.8",
         "drupal/config_update": "^1.6",
@@ -33,6 +34,7 @@
         "drupal/crop": "^1.5",
         "drupal/ctools": "^3.2",
         "drupal/devel": "^2.1",
+        "drupal/devel_php": "^1.2",
         "drupal/diff": "^1.0@RC",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.4",
