--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "drupal/juicebox": "^2.0@beta",
         "drupal/kint": "^2.1",
         "drupal/libraries": "^3.0@alpha",
+        "drupal/loggedin_users_list": "^1.0",
         "drupal/menu_trail_by_path": "^1.1",
         "drupal/metatag": "^1.10",
         "drupal/pathauto": "^1.4",
