--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "drupal/config_update": "^1.6",
         "drupal/console": "^1.0.2",
         "drupal/contact_storage": "^1.0@beta",
-        "drupal/core": "^8.7.0",
+        "drupal/core": "^8.8.12",
         "drupal/crop": "^1.5",
         "drupal/ctools": "^3.2",
         "drupal/devel": "^2.1",
@@ -56,12 +56,12 @@
         "drupal/restui": "^1.17",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
+        "webflo/drupal-core-require-dev": "^8.8.12",
         "webflo/drupal-finder": "^1.0.0",
         "webmozart/path-util": "^2.3",
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
-        "webflo/drupal-core-require-dev": "^8.7.0"
     },
     "conflict": {
         "drupal/drupal": "*"
