--- a/web/modules/custom/article/article.info.yml
+++ b/web/modules/custom/article/article.info.yml
@@ -1,7 +1,8 @@
 name: Article
 description: 'Provides Article type de contenu and related configuration. Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
 type: module
-core: 8.x
+version: VERSION
+core_version_requirement: ^8 || ^9
 dependencies:
   - comment
   - ds
