Module local book up.

--- a/web/modules/custom/book/book.info.yml
+++ b/web/modules/custom/book/book.info.yml
@@ -3,7 +3,7 @@ type: module
 description: 'Allows users to create and organize related content in an outline.'
 package: Core
 version: VERSION
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:node
 configure: book.settings
