Modules feature_reference et formation up.

--- a/web/modules/custom/formation/formation.info.yml
+++ b/web/modules/custom/formation/formation.info.yml
@@ -1,7 +1,7 @@
 name: Formation
 description: 'Provides Formation type de contenu and related configuration. '
 type: module
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - draggableviews
   - field
