--- a/web/modules/custom/memo/memo.info.yml
+++ b/web/modules/custom/memo/memo.info.yml
@@ -3,7 +3,7 @@ description: 'Des cartes à apprendre'
 package: Coopernet
 type: module
 version: 1.0
-core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:node
   - drupal:path
