composer.json et lock avant passage à drupal 9.

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/core": "^8.8.12",
         "drupal/crop": "^2.2",
         "drupal/ctools": "^3.2",
+        "drupal/devel": "^4.1",
         "drupal/diff": "^1.0@RC",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.4",
@@ -47,7 +48,7 @@
         "drupal/redirect": "^1.4",
         "drupal/restui": "^1.17",
         "drupal/upgrade_status": "^3.14",
-        "drush/drush": "^9.0.0",
+        "drush/drush": "^10",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-core-require-dev": "^8.8.12",
         "webflo/drupal-finder": "^1.0.0",
