--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/crop": "^2.2",
         "drupal/ctools": "^3.2",
         "drupal/devel": "^4.1",
+        "drupal/devel_php": "^1.5",
         "drupal/diff": "^1.0@RC",
         "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.4",
