--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal/antibot": "^1.2",
+        "drupal/better_exposed_filters": "^5.1",
         "drupal/book_tree_menu": "^2.0",
         "drupal/bootstrap": "^3.20",
         "drupal/config_update": "^1.6",
